:recycle: refactor: reorganize project structure to improve maintainability